<resources>
    <string name="app_name">Pineapple</string>
    <string name="action_settings">Settings</string>
    <string name="login_password_hint">6~20位字母与数字的组合</string>
    <string name="login_username_hint">用户名</string>
    <string name="btn_login_text">登录</string>
    <string name="btn_register_text">注册</string>
    <string name="auth_null">用户名或密码不能为空！</string>
    <string name="auth_error">用户名或密码错误！</string>
    <string name="auth">未知错误！</string>

    <string name="nav_footprint">足迹</string>
    <string name="nav_interest_tribe">兴趣部落</string>
    <string name="nav_files_manager">文件管理</string>
    <string name="nav_settings">设置</string>


    <string name="title_activity_splash">SplashActivity</string>
    <string name="username_exist_tip">用户名已存在</string>
    <string name="register_success_tip">注册成功</string>
    <string name="login_success_tip">登录成功</string>
    <string name="exit_tips">再按一次退出应用</string>
    <string name="default_card_header_title">Ari Grant withCaitlin Winner and 7 others.</string>
    <string name="default_card_header_time_location">Yesterday * ShenZhen.China</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
    <string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the camera!</string>
    <string name="permission_camera_never_askagain">Camera permission was denied with never ask again.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_interest">兴趣部落</string>
    <string name="en_children_songs">欧美儿歌</string>
    <string name="music_repo">歌曲列表</string>
</resources>
