<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:padding="10dp" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <pineapple.bd.com.pineapple.widget.ClearEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_username"
        android:layout_marginTop="5dp" >

        <pineapple.bd.com.pineapple.widget.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="20"
            android:hint="@string/login_password_hint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@+id/til_password"
        android:layout_marginTop="100dp"
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="?attr/colorPrimary"
        android:text="@string/btn_login_text"
        android:textColor="@android:color/white" />

</RelativeLayout>